--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
    <head>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="342607950887-dtqd7uqnu182rmfhtii2mg7cdr7dhei4.apps.googleusercontent.com">
+
    <style>
            .box{
 
@@ -90,16 +91,101 @@ opacity: 1; /* Firefox */
           }    
        </script>
 
-       <a href="#" role="button" onclick="signOut();">Sign out</a>
+       <a href="/logout" role="button" onclick="signOut();">Sign out</a>
        <script>
               function signOut() {
                 var auth2 = gapi.auth2.getAuthInstance();
                 auth2.signOut().then(function () {
                   console.log('User signed out.');
-                  
+
                 });
             }
       </script>
+
+
+  <script>
+        //facebook login
+  function statusChangeCallback(response) {  // Called with the results from FB.getLoginStatus().
+    console.log('statusChangeCallback');
+    console.log(response);                   // The current login status of the person.
+    if (response.status === 'connected') {   // Logged into your webpage and Facebook.
+      testAPI();  
+    } else {                                 // Not logged into your webpage or we are unable to tell.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into this webpage.';
+    }
+  }
+
+
+  function checkLoginState() {               // Called when a person is finished with the Login Button.
+    FB.getLoginStatus(function(response) {   // See the onlogin handler
+      statusChangeCallback(response);
+    });
+  }
+
+
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '{app-id}',
+      cookie     : true,                     // Enable cookies to allow the server to access the session.
+      xfbml      : true,                     // Parse social plugins on this webpage.
+      version    : '{api-version}'           // Use this Graph API version for this call.
+    });
+
+
+    FB.getLoginStatus(function(response) {   // Called after the JS SDK has been initialized.
+      statusChangeCallback(response);        // Returns the login status.
+    });
+  };
+ 
+  function testAPI() {                      // Testing Graph API after login.  See statusChangeCallback() for when this call is made.
+    console.log('Welcome!  Fetching your information.... ');
+    FB.api('/me',{fields: 'name, email'}, function(response) {
+      console.log('Successful login for: ' + response.name);
+      document.getElementById('status').innerHTML =
+        'Thanks for logging in, ' + response.name + '!';
+
+
+
+            fetch('/facebook', {
+                    method: 'POST',
+                   
+                    headers: {
+                        'Content-type': 'application/json; charset=UTF-8',
+                           useremail       : response.email,
+                           username         :response.name,
+
+                    }
+                })
+                .then(response => response.json())
+                .then(json => {
+                    console.log(json);
+                });
+
+                     
+
+
+
+
+    });
+  }
+
+
+  </script>
+
+
+
      </div>
+
+     <h1>Login with facebook</h1>
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
+
+<div id="status">
+</div>
+
+
+     <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0&appId=952647761932381&autoLogAppEvents=1" nonce="P6koDhPv"></script>
    </body>
 </html>
