--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,66 +1,44 @@
-<html>
-    <head>
-        <title>Sign up</title>
-        <style>
-            .box{
- 
- width:400px;
- height:350px;
- 
- margin:20px 400px;
- border:0px solid rgb(84, 22, 97);
- position:relative;
- 
- }
- 
- 
- input{
-   border:0px;
-   height:60px;
-   width:320px;
-   border-radius:5px;
- background-color: #29013b;
- color:#ffffff;
- font-size: 23px;
- padding-left: 20px;
- 
- }
- 
- .k:hover{
- background-color:#a652e2;
- }
- ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
- color: rgb(255, 253, 253);
- opacity: 1; /* Firefox */
- }
- 
- 
- 
-    </style>
-    </head>
+
+<%-include('./layouts/user_header')-%>
 
 
-    <body>
 
-        <div class="box">
-              <form action="/signup" method="POST">
-                    <input type="text" name="username" placeholder=" User name"><br><br>
 
-                    <input type="email" name="email" placeholder=" Email"><br><br>
-
-                    <input type="number" name="phone" placeholder=" Phone number"><br><br>
-
-                    <input type="password" name="pass1" placeholder=" Password"><br><br>
-
-                    <input type="password" name="pass2" placeholder=" Confirm your password"><br><br>
-
-                    <input type="submit" class="k" value="SUBMIT">
+<div class="section bg-light ">
+    <div class="row align-content-center bg-light pl-lg-5 " >
+       
+         <div class="col-md-6 p-5 bg-white " >
+            <h1 class="text-info text-center">REGISTER</h1>
+            <form action="/signup" method="POST">
+               
+                <div class="form-row ">
+                  <div class="form-group ">
+                    <label for="inputEmail4">Username</label>
+                    <input type="text" class="form-control"  name="username" placeholder="Username" required>
+                  </div>
+                  <div class="form-group ">
+                    <label for="inputPassword4">Email</label>
+                    <input type="email" class="form-control  " name="email" placeholder="Email"   required>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="inputAddress">Phone</label>
+                  <input type="number" class="form-control  " name="phone" placeholder="Phone" required>
+                </div>
+                <div class="form-group">
+                  <label for="inputAddress">Confirm password</label>
+                  <input type="password" class="form-control  " name="pass1" placeholder="password" required>
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Confirm password</label>
+                    <input type="password" class="form-control  " name="pass2" placeholder="Confirm password" required>
+                  </div>
+                
+                <div class="mt-4">
+                <button  type="submit" class="btn btn-primary">Sign in</button>
+            </div>
               </form>
-
-
-
-        </div>
-
-
-    </body>
-</html>
+              
+            </div>
+            </div>
+           
