--- a/views/layouts/user_header.ejs
+++ b/views/layouts/user_header.ejs
@@ -32,24 +32,32 @@
                 <a class="nav-link" href="/cart">Cart</a>
               </li>
 
-              <li class="nav-item">
-            
-                <a class="nav-link" href="/logout" >Sign out</a>
+       
+                <li class="nav-item ml-3">
+                  
+                  <a class="nav-link" href="/signup" >SignUp</a>
+                   
                  
-               
-              </li>
-              <li class="nav-item">
-            
-                <a class="nav-link" href="/signup" >Register</a>
-                 
-               
-              </li>
+                </li>
+                
+           
               
               
             </ul>
            
            
           </div>
+
+        
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="/logout">Log out</a>
+              <a class="dropdown-item" href="/login">Log in</a>
+             
+            </div>
         </div>
       </nav>
 
